files/script/test/parse_error/var/test_var_error3.ll


def main()
{
    var 32 = 100I12

}
#script("test/parse_error/var/test_var_error3.nl")